--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -17,22 +17,33 @@
     <div class="container">
         <div class="container__contenido">
             <div class="container__informaciones">
+                <div class="container__texto jugador">
+                    <h2>Nombre del jugador</h2>
+                    <input class="container__input" id="nombreJ"placeholder="Ingrese su Nombre"  type="text">
+                    <button id="guardarNombre" class="container__boton">Guardar Jugador</button>
+                </div>
                 <div class="container__texto">
                     <h1></h1>
                     <p class="texto__parrafo"></p>
                 </div>
-                <input id="valorDelInput" type="number" min="1" max="10" class="container__input">
+                <input id="valorDelInput" type="number" min="1" max="10" placeholder="Rango del 1 al 10"  class="container__input">
                 <div class="chute container__botones">
                     <button onclick="verificarIntentos()" class="container__boton">Intentar</button>
-                    <button class="container__boton" id="reiniciar" disabled onclick="reiniciarJuego()" >Nuevo juego</button>
+                    <button class="container__boton" id="reiniciar" disabled onclick="reiniciarJuego()" >Reiniciar</button>
+                    <button class="container__boton" id="puntuacion" disabled
+                    onclick=" resultadoFinal()">Resultado</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Una persona mirando a la izquierda" class="container__imagen-persona" />
         </div>
     </div>
 
+  <div class="container__texto ">
+        <h2>RESULTADOS</h2>
+        <div id="objetoJson">
 
-
+        </div>
+    </div>
 
     <script src="app.js" defer></script>
 </body>
